# termclock

./: Cargo.toml  README.md
src/: draw.rs  font.rs  main.rs
