[package]
authors = ["Jonas Schievink <jonas@schievink.net>"]
name = "termclock"
version = "0.1.1"
license = "CC0-1.0"
repository = "https://github.com/jonas-schievink/termclock"
keywords = ["terminal", "clock", "widget", "tty"]
categories = ["command-line-utilities"]
description = """
A nice-looking clock for your terminal
"""

[dependencies]
clap = "2.20.0"
lazy_static = "0.2.2"
libc = "0.2"
pancurses = "0.8.0"
time = "0.1.35"
